[package]
name = "wasmtime-api"
authors = ["The Wasmtime Project Developers"]
version = "0.1.0"
description = "High-level API to expose the Wasmtime runtime"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/CraneStation/wasmtime"
edition = "2018"

[lib]
name = "wasmtime_api"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# cranelift-codegen = { version = "0.44.0", features = ["enable-serde"] }

# cranelift-codegen = { version = "0.36.0", features = ["enable-serde"] }
cranelift-codegen = { path = "../../cranelift/cranelift-codegen", features = ["enable-serde"] }

# cranelift-native = "0.44.0"
# cranelift-native = { version = "0.36.0", features = ["enable-serde"] }
cranelift-native = { path = "../../cranelift/cranelift-native" }

# cranelift-entity = { version = "0.44.0", features = ["enable-serde"] }
# cranelift-entity = { version = "0.36.0", features = ["enable-serde"] }
cranelift-entity = { path = "../../cranelift/cranelift-entity", features = ["enable-serde"] }

# cranelift-wasm = { version = "0.44.0", features = ["enable-serde"] }
# cranelift-wasm = { version = "0.36.0", features = ["enable-serde"] }
cranelift-wasm = { path = "../../cranelift/cranelift-wasm", features = ["enable-serde"] }

# cranelift-frontend = "0.44.0"
# cranelift-frontend = { version = "0.36.0", features = ["enable-serde"] }
cranelift-frontend = { path = "../../cranelift/cranelift-frontend" }


wasmtime-runtime = { path="../wasmtime-runtime" }
wasmtime-environ = { path="../wasmtime-environ" }
wasmtime-jit = { path="../wasmtime-jit" }
# wasmparser = { version = "0.39.1", default-features = false }
wasmparser = { path = "../../wasmparser.rs", default-features = false } # default-features = false
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
target-lexicon = { version = "0.8.1", default-features = false }
region = "2.0.0"
hashbrown = { version = "0.6.0", optional = true }

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-wasm/std", "wasmtime-environ/std", "wasmparser/std"]
wasm-c-api = []
core = ["hashbrown/nightly", "cranelift-codegen/core", "cranelift-wasm/core", "wasmtime-environ/core", "wasmparser/core"]

[dev-dependencies]
# for wasmtime.rs
wasi-common = { git = "https://github.com/CraneStation/wasi-common", rev = "603f7a9"}
docopt = "1.0.1"
serde = { "version" = "1.0.94", features = ["derive"] }
pretty_env_logger = "0.3.0"
# wabt = "0.9.2"
wabt = { path = "../../wabt-rs" }
wasmtime-wast = { path="../wasmtime-wast" }
wasmtime-wasi = { path="../wasmtime-wasi" }
rayon = "1.1"
file-per-thread-logger = "0.1.1"
